Issue #179: Prevent overflow:hidden from hiding entire submission info div.

--- a/css/webform-admin.css
+++ b/css/webform-admin.css
@@ -11,9 +11,6 @@
   float: right;
   margin-left: 10px;
 }
-.webform-submission-info-text {
-  overflow: hidden;
-}
 .webform-submission-actions {
   float: left;
 }
